# izvox

./: .dockerignore  .gitignore  CLAUDE_CODE_FULL_INSTRUCTIONS.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_cpu.txt  requirements_cuda.txt  requirements_directml.txt  setup.py
.github/workflows/: release.yml  tests.yml
config/: balanced.yaml  cpu_only.yaml  default.yaml  high_performance.yaml  low_resource.yaml
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  INSTALLATION.md  SECURITY.md  TROUBLESHOOTING.md  USAGE.md
models/: manifest.json
scripts/: install_windows.bat  install_windows.ps1  run.bat  run.ps1  run_appcontainer.ps1  setup_vbcable.md
src/: __init__.py  audio_manager.py  audio_process_capture.py  config.py  exceptions.py  file_pipeline.py  hardware_detector.py  main.py  model_manager.py  pipeline.py  stt.py  translator.py  tts.py  utils.py  vad.py
src/security/: __init__.py  audit.py  integrity.py  manifest.py  memory.py  network.py  redaction.py
tests/: __init__.py  conftest.py  test_audio.py  test_audio_process_capture.py  test_config.py  test_critical_bugs.py  test_file_pipeline.py  test_generate_test_wav.py  test_hardware.py  test_integration.py  test_pipeline.py  test_security.py  test_security_audit.py  test_security_audit_hmac.py  test_security_integrity.py  test_security_memory.py  test_stt.py  test_translator.py  test_tts.py  test_utils.py  test_vad.py
tools/: audio_diagnostic.py  benchmark.py  download_models.py  generate_sbom.py  generate_test_wav.py  setup_check.py  sign_sources.py  test_translation.py
