[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "izvox"
version = "2.0.0"
description = "Traducteur bidirectionnel temps réel pour visioconférences (Teams/Zoom/Meet)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Expert Python AI"}
]
keywords = ["translation", "real-time", "speech-to-text", "tts", "teams", "zoom", "whisper", "nllb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "pyaudiowpatch>=0.2.12.9",
    "soundfile>=0.12.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "accelerate>=0.25.0",
    "sentencepiece>=0.1.99",
    "faster-whisper>=1.0.0",
    "ctranslate2>=3.24.0",
    "piper-tts>=1.2.0",
    "onnxruntime>=1.16.0",
    "psutil>=5.9.0",
    "py-cpuinfo>=9.0.0",
    "colorlog>=6.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.scripts]
izvox = "src.main:run"

[project.urls]
Homepage = "https://github.com/user/izvox"
Documentation = "https://github.com/user/izvox/tree/main/docs"
Issues = "https://github.com/user/izvox/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
